--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -18,6 +18,7 @@
    <nav>
     <div class="nav-left">
         <button id="dark-mode-toggle">🌙 </button>
+        <button class="nav-toggle">☰</button>
         <div class="logo">Harshita Gaur</div>
     </div>
     <div class="nav-links">
@@ -103,9 +104,9 @@
         </form>
     </section>
 
+    <script src="{% static 'js/particles.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script src="{% static 'js/particles.js' %}"></script>
 </body>
 </html>
